# protobuf

./: .bazelrc  BUILD.bazel  CMakeLists.txt  MODULE.bazel  WORKSPACE  appveyor.bat  protobuf_deps.bzl  regenerate_stale_files.sh  rules_java.patch
.bazelci/: presubmit.yml
.bcr/: presubmit.yml
.github/workflows/: janitor.yml  scorecard.yml  staleness_refresh.yml  test_bazel.yml  test_cpp.yml  test_csharp.yml  test_java.yml  test_php.yml  test_php_ext.yml  test_python.yml  test_ruby.yml  test_runner.yml  test_rust.yml  test_upb.yml
bazel/: BUILD  cc_proto_library.bzl  java_lite_proto_library.bzl  java_proto_library.bzl  py_proto_library.bzl
bazel/private/: BUILD  bazel_cc_proto_library.bzl  proto_lang_toolchain_rule.bzl  proto_library_rule.bzl
bazel/tests/: cc_toolchain_tests.bzl
ci/: Windows.bazelrc  bazel9.bazelrc  common.bazelrc
cmake/: dependencies_generator.py  installed_include_golden.txt
conformance/: BUILD  failure_list_trie_node_test.cc
csharp/: BUILD.bazel
editions/: BUILD  defaults_test.cc  edition_defaults_test_utils.cc  generated_files_test.cc  test_utils.cc  test_utils.h  test_utils_test.cc
examples/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE
hpb/: extension.h
hpb/internal/: internal.h
hpb_generator/: gen_accessors.cc  gen_repeated_fields.cc
hpb_generator/tests/: extension_test.cc
objectivec/: GPBUtilities.m
php/: BUILD.bazel
pkg/: BUILD.bazel
python/: build_targets.bzl  convert.c  descriptor_containers.c  extension_dict.c  map.c  message.c  message.h  repeated.c
rust/: BUILD  aspects.bzl  extension.rs
upb/: BUILD
(+172 files in other folders)
